err/quokka-twill.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quokka_twill-1.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twill'...
Compiling './lib/python3.5/site-packages/twill/browser.py'...
***   File "./lib/python3.5/site-packages/twill/browser.py", line 8
    from __future__ import print_function
                                        ^
SyntaxError: from __future__ imports must occur at the beginning of the file

Listing './lib/python3.5/site-packages/twill/extensions'...
Listing './lib/python3.5/site-packages/twill/extensions/match_parse'...
Listing './lib/python3.5/site-packages/twill/other_packages'...
Listing './lib/python3.5/site-packages/twill/other_packages/_mechanize_dist'...
Compiling './lib/python3.5/site-packages/twill/other_packages/_mechanize_dist/ClientForm.py'...
***   File "./lib/python3.5/site-packages/twill/other_packages/_mechanize_dist/ClientForm.py", line 63
    True = 1
    ^
SyntaxError: can't assign to keyword

Compiling './lib/python3.5/site-packages/twill/other_packages/subprocess.py'...
***   File "./lib/python3.5/site-packages/twill/other_packages/subprocess.py", line 392
    False = 0
    ^
SyntaxError: can't assign to keyword

Listing './share'...
Listing './share/python-wheels'...
